feat(events): Added event test utils
